test/expected/explain_rgf_v.out
register int f(void)
^
1: syntax error: "register": unexpected token ("register" is a keyword)
